pamc/src/tests/sample_code/should_fail/single_file/type_check/type_mismatch/type_not_a_type.ph
type U {
    .U: U,
}

let foo = fun bar_(T: Type): Type {
    Type
};
